--- a/templates/cards/volume.html
+++ b/templates/cards/volume.html
@@ -27,7 +27,7 @@
                 <option value="5">5 Liters</option>
                 <option value="10">10 Liters</option>
                 <option value="15">15 Liters</option>
-                <option value="20">20 Liter</option>
+                <option value="20">20 Liters</option>
                 <option value="25">25 Liters</option>
                 <option value="30">30 Liters</option>
                 <option value="35">35 Liters</option>
