add add_recipe inteface

--- a/templates/cards/recipe.html
+++ b/templates/cards/recipe.html
@@ -20,16 +20,16 @@
         <div id="modal-add-recipe" class="modal">
           <div class="modal-content">
             <h4>Add a recipe</h4>
-              <form class="col">
+              <form class="col s12">
 
                 <div class="input-field col s12">
-                  <input id="last_name" type="text" class="validate">
+                  <input id="input-url" type="text" class="validate">
                   <label for="url">Brewtoad URL</label>
                 </div>
               </form>
           </div>
           <div class="modal-footer">
-            <button class="btn waves-effect waves-light modal-close modal-action" type="submit" name="action">Submit
+            <button class="btn waves-effect waves-light modal-close modal-action" type="submit" name="action" id="submit-url">Submit
               <i class="material-icons right">send</i>
             </button>
           </div>
