#2: recipe addition should be ok. Will be verified with #3

--- a/static/style.css
+++ b/static/style.css
@@ -135,6 +135,10 @@ label.waiting {
   color: grey;
 }
 
+#modal-add-recipe input#input-url {
+    color: black;
+} 
+
 /*valve*/
 .valve-name {
   font-size: 18px;
