#4 checkboxes are now ajax-ed

--- a/templates/cards/next_steps.html
+++ b/templates/cards/next_steps.html
@@ -1,6 +1,6 @@
 <!-- Next steps card -->
 <div class="col s4">
-  <div class="card task">
+  <div class="card task" id="card-task">
     <div class="card-content">
       <span class="card-title">Next steps</span>
     </div>
