--- a/templates/cards/recipe.html
+++ b/templates/cards/recipe.html
@@ -38,11 +38,12 @@
         <!-- Modal edit recipes -->
         <div id="modal-edit-recipes" class="modal bottom-sheet">
           <div class="modal-content">
-            <h4>Modal Header</h4>
-            <p>A bunch of text</p>
+            <h4>Edit Recipe</h4>
+            <h5>Mash steps</h5>
+            <h5>Boil steps</h5>
           </div>
           <div class="modal-footer">
-            <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+            <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
           </div>
         </div>
 
