#12: this task is taking too much time -- consider any help if this feature interested somebody

--- a/static/style.css
+++ b/static/style.css
@@ -137,7 +137,15 @@ label.waiting {
 
 #modal-add-recipe input#input-url {
     color: black;
-} 
+}
+
+#modal-edit-recipe {
+    color: black;
+}
+
+#modal-edit-recipe .title {
+    float: left;
+}
 
 /*valve*/
 .valve-name {
